--- a/public/style.css
+++ b/public/style.css
@@ -69,6 +69,7 @@ a:visited {
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	cursor: pointer;
 	transition: 0.75s;
+	border-radius: 5px;
 
 }
 
@@ -138,68 +139,75 @@ a:visited {
 	width: 200px;
 }
 
+.Title{
+
+	text-align: center;
+	margin-bottom: 150px;
+
+}
+
+.Title2{
+
+	text-align: center;
+	margin-bottom: 100px;
+
+}
+
 .time{
 	margin-left: 30px;
 	margin-right: 30px;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
 }
 
-.TopArtists{
+.Category{
+	position: relative;
 	text-align: center;
 	display: flex;
 	justify-content: center;
-	position: relative;
-	top:-75px;
-	margin-bottom: -120px;
+	margin-top: -150px;
+	align-items: center;
 }
 
-.TopSong{
+.Songs{
 	text-align: center;
-	display: flex;
-	justify-content: center;
-	margin:auto;
 	position: relative;
-	top:-75px;
-	margin-bottom:100px;
+	align-items: center;
+	justify-content: center;
 }
 
 
 .History{
 	text-align: center;
 	position: relative;
-	top:-250px;
-	padding-top: 100px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: row;
 	flex-wrap: wrap;
-
 }
 
-.Child1{
-	height: 275px;
-	width: 350px;
-	margin-left: 10px;
-	margin-right: 10px;
-	transition: 0.5s;
-	margin-bottom: 30px;
-	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-	border-radius: 10px;
-	background-color: #1e9b49;
-}
+
 
 .Child2{
-	height: 325px;
+	height: 300px;
 	width: 350px;
 	transition: 0.5s;
 	margin-left: 10px;
 	margin-right: 10px;
-	margin-bottom: 20px;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	border-radius: 10px;
 	padding-top: 10px;
 	background-color: #1e9b49;
-	
+	z-index: -1;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	display: flex; /* Make it a flex container */
+	flex-direction: column; /* Stack image and text vertically */
+	align-items: center; /* Center items horizontally within the flex container */
+	margin: 15px;
 }	
 
 .Child1:hover{
@@ -208,7 +216,38 @@ a:visited {
 
 .Child2:hover{
 	transform: scale(1.15);
+	background-color: #fffbfb41;
+	z-index: -1;
+	transition: 1s;
 }
+
+/* .Child2:hover .Child2Text {
+	visibility: hidden;
+	
+} */
+
+.Child2:hover .Child2Text2 {
+	visibility: visible;
+	filter: blur(0px);
+}
+
+.Child2Text2{
+	visibility: hidden;
+	position: absolute;
+	top: 25%;
+	left: 45%;
+	transform: translate(-50%, -50%);
+}
+
+.Child2Text{
+	text-align: center;
+}
+
+#songHis{
+	position: relative;
+	clear: none;
+}
+
 
 #text{
 	
@@ -233,6 +272,7 @@ a:visited {
 	margin-top: 20px;
 	
 }
+
 
 .Content-Buttons{
 	text-align: center;
