--- a/public/style.css
+++ b/public/style.css
@@ -8,11 +8,15 @@ h1, h2, h3, h4, h5, h6, strong{
 
 html {
 	font-size: 50px;
-	background-color: #1DB954;
-	color: #999;
 	height: fit-content;
 	scroll-behavior: smooth;
+
 }
+
+body{
+    background: linear-gradient(90deg,#27d463, #0b4112);
+}
+
 
 a{
 	text-decoration: none;
@@ -140,9 +144,12 @@ a:visited {
 }
 
 .Title{
-
 	text-align: center;
-	margin-bottom: 150px;
+
+	background-color:#191414;
+	padding: 20px;
+	border-radius: 10px;
+	margin-bottom:150px;
 
 }
 
@@ -150,7 +157,10 @@ a:visited {
 
 	text-align: center;
 	margin-bottom: 100px;
-
+	background-color:#191414;
+	padding: 20px;
+	border-radius: 10px;
+	color:white;
 }
 
 .time{
@@ -168,6 +178,8 @@ a:visited {
 	justify-content: center;
 	margin-top: -150px;
 	align-items: center;
+
+
 }
 
 .Songs{
@@ -175,6 +187,7 @@ a:visited {
 	position: relative;
 	align-items: center;
 	justify-content: center;
+	
 }
 
 
@@ -193,13 +206,12 @@ a:visited {
 .Child2{
 	height: 300px;
 	width: 350px;
-	transition: 0.5s;
 	margin-left: 10px;
 	margin-right: 10px;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	border-radius: 10px;
 	padding-top: 10px;
-	background-color: #1e9b49;
+	background: #15873d;
 	z-index: -1;
 	text-align: center;
 	justify-content: center;
@@ -208,35 +220,51 @@ a:visited {
 	flex-direction: column; /* Stack image and text vertically */
 	align-items: center; /* Center items horizontally within the flex container */
 	margin: 15px;
+	transition:1s;
+	
 }	
 
-.Child1:hover{
-	transform: scale(1.15);
-}
 
 .Child2:hover{
 	transform: scale(1.15);
 	background-color: #fffbfb41;
 	z-index: -1;
 	transition: 1s;
+	
 }
 
-/* .Child2:hover .Child2Text {
-	visibility: hidden;
+.Child2:hover #Pic {
+	transition:1s;
+	filter:blur(5px);	
 	
-} */
+}
+
+.Child2:hover .Child2Text {
+	visibility: hidden;	
+}
 
 .Child2:hover .Child2Text2 {
-	visibility: visible;
-	filter: blur(0px);
+    visibility:visible;
+    opacity:1;
 }
 
 .Child2Text2{
 	visibility: hidden;
 	position: absolute;
-	top: 25%;
-	left: 45%;
+	top: 35%;
+	left: 44.25%;
 	transform: translate(-50%, -50%);
+    opacity: 1;
+    transition: visibility 0s ease;
+	background: linear-gradient(150deg, #b9ffc337 0%, #91969156 100%);
+	padding:25px;
+	padding-left: 70px;
+	padding-right: 70px;
+	border-radius: 10px;
+	width: 150px;
+    opacity: 0;
+	transition:visibility 0.3s linear,opacity 0.3s linear;
+
 }
 
 .Child2Text{
@@ -250,7 +278,6 @@ a:visited {
 
 
 #text{
-	
 	font-size: 25px;
 	width: 450px;
 	margin-left:10px;
@@ -261,7 +288,8 @@ a:visited {
 #songhis{
 	font-size: 25px;
 	margin-left:20px;
-	margin-right:20px;	
+	margin-right:20px;
+	margin-bottom: 100px;	
 }
 
 #Pic{
@@ -279,6 +307,7 @@ a:visited {
 	margin-top:30px;
 	margin-bottom: -10px;
 	
+	
 }
 
 .conBut{
@@ -293,6 +322,7 @@ a:visited {
 	border-width: 0;
 	font-size: 20px;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	background: linear-gradient(150deg, #5cff75 0%, #919691 100%);
 }
 
 .conBut:hover{
